--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,28 @@
 <resources>
     <string name="app_name">My News</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string-array name="countries_list">
+        <item>Canada</item>
+        <item>Egypt</item>
+        <item>France</item>
+        <item>Germany</item>
+        <item>China</item>
+        <item>United Arab Emirates</item>
+        <item>United Kingdom</item>
+        <item>United States</item>
+    </string-array>
+
+    <string-array name="languages_list">
+        <item>English</item>
+        <item>Arabic</item>
+        <item>German</item>
+        <item>Spanish</item>
+        <item>French</item>
+        <item>Italian</item>
+        <item>Portuguese</item>
+        <item>Chinese</item>
+    </string-array>
+
+
+
 </resources>
